# Friday-backup

./: .gitignore  Cargo.toml  TODO  pyproject.toml  test.py
python/Friday/: friday.py
python/Friday/core/: soul.py
python/Friday/core/commands/: list.py
python/Friday/core/exceptions/: STTe.py
python/Friday/core/flow/: resolve.py
python/Friday/core/memory/: speech.py
python/Friday/core/speech/: stt.py  tts.py
python/Friday/utils/: files.py  terminal.py
src/: dependencies.rs  lib.rs  tts.rs
