[package]
name = "tts"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
hound = "3.5.1"
portaudio = "0.7.0"
pyo3 = { version = "0.22.2", features = ["extension-module"] }
# rodio = "0.19.0"
tts_rust = "0.3.5"
# vosk = "0.2.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0"
