[package]
name = "friday-rust-lib"
version = "0.1.2"
edition = "2021"

[dependencies]
cpal = "0.15.3"
hound = "3.5.1"
portaudio = "0.7.0"
pyo3 = { version = "0.22.2", features = ["extension-module"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
# rodio = "0.19.0"
tts_rust = "0.3.5"
# vosk = "0.2.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0"
